# distributed-rocksdb

./: .dockerignore  .env  .gitignore  README.md  docker-compose.2servers-1client.yml  docker-compose.4servers-4clients.yml  docker-compose.4servers-no-clients.yml  docker-compose.jni-1server-1client.yml
.github/workflows/: docker-image-release.yml  docker-image.yml
benchmarks/configs/: server6.txt
benchmarks/results/attempt 1/load/: 1  1024  16384  256  262144  4096  8
benchmarks/results/attempt 1/run/: 1  1024  1048576  16384  256  262144  4096  8
benchmarks/results/attempt 2/load/1/: 0  1  2  3
benchmarks/scripts/attempt 1 2/: client_load.py  client_run.py  extract_ycsb_data.py
benchmarks/scripts/attempt 3/: client_load.py  client_run_6_servers_varying_redirect_clients.py  extract_attempt_3_run.py
benchmarks/workloads/a/fieldlength-varying/: 1  1024  1048576  16384  256  262144  65536  8
cpp/: .gitignore  CMakeLists.txt
cpp/Valgrind/leak-check-full/: 1000-put-client.txt  1000-put-server.txt
cpp/Valgrind/leak-check-yes/: 1000-empty-reads-client.txt  1000-empty-reads-server.txt
cpp/clion-run-configs/: 1server.run.xml  2servers - server 1.run.xml  2servers - server 2.run.xml  4servers - server 1.run.xml  4servers - server 2.run.xml  4servers - server 3.run.xml  4servers - server 4.run.xml  Four Servers.run.xml  Two Servers.run.xml  client CLI.run.xml  client.run.xml
cpp/src/: CMakeLists.txt
cpp/src/distributed-rocksdb/: CMakeLists.txt
cpp/src/distributed-rocksdb/Client/: CMakeLists.txt  DrdbClient.cpp  DrdbClient.h  DrdbClientApp.cpp  DrdbClientApp.h  main.cpp
cpp/src/distributed-rocksdb/Common/: ClientServerCommons.h
cpp/src/distributed-rocksdb/JNI/: CMakeLists.txt  JDrdbClient.cpp  JDrdbClient.h
cpp/src/distributed-rocksdb/Server/: CMakeLists.txt  DrdbConnectionAcceptor.cpp  DrdbConnectionAcceptor.h  DrdbConnectionDeque.cpp  DrdbConnectionDeque.h  DrdbConnectionHandler.cpp  DrdbConnectionHandler.h  DrdbServerApp.cpp  DrdbServerApp.h  DrdbWorker.cpp  DrdbWorker.h  main.cpp  server_config1.txt  server_config2.txt  server_config4.txt
dockerfiles/: debian_base.dockerfile  drdb_debug.dockerfile  drdb_release.dockerfile
docs/: JNI.md  YCSB.md  bscluster.md  cpp.md
java/: build.gradle  settings.gradle
java/src/main/include/: site_ycsb_db_JDrdbClient.h
java/src/main/java/: App.java
singularity/: recipe
visualisation/: .RData  .Rhistory
visualisation/attempt 2/: attempt2.R  load_data.csv  run_data.csv
visualisation/attempt 3/: attempt 3_data.csv  attempt3.R
ycsb/: data.csv  data2.csv  pom.xml
ycsb/drdb/: pom.xml
ycsb/workloads/: workloada
(+619 files in other folders)
